change app title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MuffinSync</string>
+    <string name="app_name">muffin_studio_app_base</string>
 </resources>
 
